[gd_scene load_steps=3 format=3 uid="uid://c3egfkxc43444"]

[ext_resource type="Script" path="res://Menu/main_menu.gd" id="1_ux81b"]

[sub_resource type="Theme" id="Theme_udgq0"]
Button/font_sizes/font_size = 32
Label/font_sizes/font_size = 32
LineEdit/font_sizes/font_size = 32
VBoxContainer/constants/separation = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_udgq0")
script = ExtResource("1_ux81b")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.5
offset_top = -270.5
offset_right = 400.5
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "LazerClone
Demo"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -3.5
offset_right = 227.0
offset_bottom = 394.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerNameField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Name"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Lobby"

[node name="HostPortField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter port to host on"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="IpField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Host IP Address"

[node name="PortField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Host Port"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
